corrigindo botao copiar

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         //ao clicar no botao abre a função:
         .addEventListener("click", function () {
           // Seleciona o texto do elemento textarea
-          var texto = document.querySelector("#texto").value;
+          var texto = document.querySelector("#saida").value;
 
           // Crie um elemento input com o texto selecionado
           var input = document.createElement("input");
