--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           class="texto"
         ></textarea>
         <img
-          src="./apenas letras minusculas e sem acento.png"
+          src="apenas letras minusculas e sem acento.png"
           id="esclamacao"
           class="imagemExclamacao"
         />
@@ -107,7 +107,7 @@
         //ao clicar no botao abre a função:
         .addEventListener("click", function () {
           // Seleciona o texto do elemento textarea
-          var texto = document.querySelector(".saida").value;
+          var texto = document.querySelector("#texto").value;
 
           // Crie um elemento input com o texto selecionado
           var input = document.createElement("input");
